feat(core/jvm): enhance JVM tuning and monitoring documentation
- Comprehensive JVM parameters (memory, GC, JIT, performance)
- Diagnostic tools (jstat, jmap, jstack, jinfo, jcmd)
- JFR (Java Flight Recorder) configuration and analysis
- JMX monitoring setup
- Common problem diagnosis (memory leaks, CPU high, deadlock, GC)
- Performance tuning (startup, throughput, latency)
- hsdb (HotSpot Debugger) usage

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>